[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-task-scheduler"
version = "0.1.0"
description = "A low-level, asyncio-based distributed task scheduler"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ray", email = "ray@venterprise.io"}
]
keywords = ["distributed computing", "asyncio", "task scheduler", "rpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
dts-server = "server:main"
dts-worker = "worker:main"
dts-client = "client:main"

[project.urls]
Homepage = "https://github.com/rayventerprise/python-task-scheduler"
Repository = "https://github.com/rayventerprise/python-task-scheduler"
Issues = "https://github.com/rayventerprise/python-task-scheduler/issues"

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "asyncio.*",
    "struct.*",
    "hashlib.*",
    "json.*",
    "uuid.*",
    "logging.*",
    "sys.*",
    "os.*",
    "ast.*",
]
ignore_missing_imports = true 